--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <!-- About Menu -->
 <li class="has-dropdown">
-<a href="menu-classic.html" class="menu-item">Menu</a>
+<a href="https://heyzine.com/flip-book/7ccedad8b6.html" class="menu-item">Menu</a>
 <!-- li end -->
 
 <li>
@@ -282,7 +282,7 @@
 						data-responsive_offset="on" 
 						data-responsive="off">
 						<div class="slide-action">
-							<a class="btn btn--primary btn--inverse btn--rounded btn--lg" href="#">View Menu</a>
+							<a class="btn btn--primary btn--inverse btn--rounded btn--lg" href="https://heyzine.com/flip-book/7ccedad8b6.html">View Menu</a>
 						</div>
 					</div>
 				</li>
