--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 
 <!-- About Menu -->
 <li class="has-dropdown">
-<a href="https://heyzine.com/flip-book/7ccedad8b6.html" class="menu-item">Menu</a>
+<a href="https://wa.link/bgl9ja" class="menu-item">Reserve your table now</a>
 <!-- li end -->
 
 <li>
-<a class="menu-item" href="https://wa.link/bgl9ja" target="_blank">book a table</a>
+<a class="menu-item" href="https://heyzine.com/flip-book/7ccedad8b6.html" target="_blank">See Our Menu</a>
 </li>
 
 <!-- Features Menu-->
