--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 
 <!-- About Menu -->
 <li class="has-dropdown">
-<a href="https://heyzine.com/flip-book/7ccedad8b6.html" class="menu-item">See Our Menu</a>
+<a href="https://heyzine.com/flip-book/7ccedad8b6.html" class="menu-item"> Menu</a>
 <!-- li end -->
 
 <li>
-<a class="menu-item" href="https://wa.link/bgl9ja" target="_blank">Reserve your table now</a>
+<a class="menu-item" href="https://wa.link/bgl9ja" target="_blank">Reserve your table </a>
 </li>
 
 <!-- Features Menu-->
@@ -212,7 +212,7 @@
 						data-responsive_offset="on" 
 						data-responsive="off">
 						<div class="slide-action">
-							<a class="btn btn--white btn--bordered btn--rounded btn--lg" href="https://wa.link/bgl9ja">Book Your Table Now</a>
+							<a class="btn btn--white btn--bordered btn--rounded btn--lg" href="https://heyzine.com/flip-book/7ccedad8b6.html">Discover Our Menu</a>
 						</div>
 					</div>
 				</li>
@@ -282,7 +282,7 @@
 						data-responsive_offset="on" 
 						data-responsive="off">
 						<div class="slide-action">
-							<a class="btn btn--primary btn--inverse btn--rounded btn--lg" href="https://heyzine.com/flip-book/7ccedad8b6.html">View Menu</a>
+							<a class="btn btn--primary btn--inverse btn--rounded btn--lg" href="https://wa.link/bgl9ja">Reserve your table now</a>
 						</div>
 					</div>
 				</li>
