--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <!-- About Menu -->
 <li class="has-dropdown">
-<a href="https://heyzine.com/flip-book/7ccedad8b6.html" class="menu-item"> Menu</a>
+<a href="https://online.flippingbook.com/view/853937141/" class="menu-item"> Menu</a>
 <!-- li end -->
 
 <li>
