--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 						data-responsive_offset="on" 
 						data-responsive="off">
 						<div class="slide-action">
-							<a class="btn btn--white btn--bordered btn--rounded btn--lg" href="https://online.flippingbook.com/view/853937141/">Discover Our Menu</a>
+							<a class="btn btn--white btn--bordered btn--rounded btn--lg" href="https://heyzine.com/flip-book/7ccedad8b6.html/">Discover Our Menu</a>
 						</div>
 					</div>
 				</li>
